--- a/Notebook.Web/Views/Account/Login.cshtml
+++ b/Notebook.Web/Views/Account/Login.cshtml
@@ -14,6 +14,9 @@
             top: -11px;
             z-index: 1;
         }
+    .login-box, .register-box{
+            margin:2% auto;
+        }
 </style>
 
 <div class="login-box" style="width:100%;">
