--- a/Notebook.Web/Views/Folder/Navigation.cshtml
+++ b/Notebook.Web/Views/Folder/Navigation.cshtml
@@ -3,5 +3,5 @@
 @inject IViewLocalizer Localizer
 
 <ul class="nav nav-tabs">
-    <li @(Model.List == "Notes" ? "class=active" : "")><a href="/@Model.ID/group-detail/notes"><i class="fa fa-newspaper-o"></i>&nbsp;@Localizer["Notes"]</a></li>
+    <li @(Model.List == "Notes" ? "class=active" : "")><a href="/@Model.ID/folder-detail"><i class="fa fa-newspaper-o"></i>&nbsp;@Localizer["Notes"]</a></li>
 </ul>
