--- a/Notebook.Web/Views/Group/Form.cshtml
+++ b/Notebook.Web/Views/Group/Form.cshtml
@@ -22,8 +22,8 @@
                     </div>
                     <div class="form-group">
                         <label>@Localizer["Visibility"]</label>
-                        <div id="private-alert" class="alert alert-warning alert-small">
-                            @Localizer["Nobody can see the group contents"]
+                        <div id="private-alert" class="alert alert-info alert-small">
+                           <i class="fa fa-info-circle"></i> @Localizer["Nobody can see the group contents"]
                         </div>
                         <div class="checkbox">
                             <label style="padding:0">
