--- a/Notebook.Web/Views/Shared/_Layout.cshtml
+++ b/Notebook.Web/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
     <script src="/notebook/cssJs/js/ajaxFunctions.js"></script>
 
     <script>
-        $.extend(true, $.fn.dataTable.defaults, {
+        @*$.extend(true, $.fn.dataTable.defaults, {
             "language": {
                 "lengthMenu":"@Localizer["Show"]: _MENU_",
                 "decimal": "",
@@ -120,7 +120,7 @@
                     "sortDescending": ": activate to sort column descending"
                 }
             }
-        });
+        });*@
 
     </script>
 
