--- a/Notebook.Web/Views/Group/Navigation.cshtml
+++ b/Notebook.Web/Views/Group/Navigation.cshtml
@@ -4,5 +4,6 @@
 
 <ul class="nav nav-tabs">
     <li @(Model.List == "Folders" ? "class=active" : "")><a href="/@Model.ID/group-detail"><i class="fa fa-folder-open-o"></i>&nbsp;@Localizer["Folders"]</a></li>
-    <li @(Model.List == "Notes" ? "class=active" : "")><a href="/@Model.ID/group-detail/notes"><i class="fa fa-newspaper-o"></i>&nbsp;@Localizer["All Notes"]</a></li>
+    <li @(Model.List == "Notes" ? "class=active" : "")><a href="/@Model.ID/group-detail/notes"><i class="fa fa-newspaper-o"></i>&nbsp;@Localizer["Notes"]</a></li>
+    <li @(Model.List == "Members" ? "class=active" : "")><a href="/@Model.ID/group-detail/members"><i class="fa fa-paw"></i>&nbsp;@Localizer["Members"]</a></li>
 </ul>
