--- a/Notebook.Web/Views/Note/Form.cshtml
+++ b/Notebook.Web/Views/Note/Form.cshtml
@@ -49,7 +49,7 @@
                         <input type="text" class="form-control" name="Tags" value="@Model.Tags" placeholder="@Localizer["Tags"]" />
                     </div>
                     <div class="form-group">
-                        <label>@Localizer["Visible"]</label>
+                        <label>@Localizer["Visibility"]</label>
                         <div class="checkbox">
                             <label style="padding:0">
                                 @Html.RadioButtonFor(a => a.Visible, Visible.Private) @Localizer["Me and group members"]
